# MedVLM-GRPO

./: .gitignore  Qwentrain.py  Readme.md  args.py  data_loader.py  metrics.py  pyproject.toml  requirements.txt  reward_func.py  training_config.py
autodl/: README.md  activate.sh  requirements.txt  setup.sh
configs/: environment.yml
docs/: local_vqarad_smoke.md
reports/: dataset_audit.json  vqarad-smoke-sft-seed42-evaluation.md  vqarad-smoke-sft-seed42-metrics.json  vqarad-smoke-sft-seed42-predictions.jsonl
scripts/: aggregate_seed_metrics.py  audit_datasets.py  batch_infer.py  check_environment.py  estimate_resources.py  evaluate_predictions.py  infer.py  local_vqarad_bridge_smoke.py  openmedreason_100_grpo.py  resume_vqarad_neural_rollout.py  run_ablations.ps1  train_unsloth_grpo.py
src/medvlm_grpo/: __init__.py  arguments.py  cli.py  data.py  metrics.py  precision.py  rewards.py  smoke_rewards.py  tracking.py  training.py
src/medvlm_grpo/unsloth_pipeline/: __init__.py  monitoring.py  privacy.py  rewards.py
tests/: test_data.py  test_metrics.py  test_rewards.py  test_smoke_rewards.py  test_tracking.py  test_training_precision.py  test_unsloth_reward_models.py
