[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medvlm-grpo"
version = "0.1.0"
description = "Cold-start and DAPO training for medical vision-language models"
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
medvlm-train = "medvlm_grpo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: loads local neural models and runs slower integration checks",
]
